--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Larissa Angald</title>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>personal-page-app</title>
+    <link href="css/bootstrap-reboot.min.css" rel="stylesheet">    
+    <link href="css/bootstrap-grid.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but personal-page-app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but page doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
