Added Google Analytic code

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122681725-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-122681725-1');
+    </script>
+    <title>Larissa Angald</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Larissa Angald</title>
+    <meta name="keywords" content="Larissa Angald, Лариса Ангальд">
+    <meta property="og:title" content="Larissa Angald"/>
+    <meta property="og:description" content="Welcome to my web page"/>
+    <meta property="og:image" content="https://langald.github.io/favicon/android-icon-192x192.png"/>
+    
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
@@ -23,6 +37,7 @@
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!--<link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
+    
     <link href="css/bootstrap-reboot.min.css" rel="stylesheet">    
     <link href="css/bootstrap-grid.min.css" rel="stylesheet">    
     <link href="css/fontawesome-all.min.css" rel="stylesheet">  
