--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <link href="css/bootstrap-reboot.min.css" rel="stylesheet">    
     <link href="css/bootstrap-grid.min.css" rel="stylesheet">    
     <link href="css/fontawesome-all.min.css" rel="stylesheet">  
+    <link href="css/animate.min.css" rel="stylesheet">  
 
   </head>
   <body>
