added Animate on Scroll Library and reorganized css files

--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
     <meta name="theme-color" content="#ffffff">
     <!--<link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
     
-    <link href="<%= BASE_URL %>css/bootstrap-reboot.min.css" rel="stylesheet">    
-    <link href="<%= BASE_URL %>css/bootstrap-grid.min.css" rel="stylesheet">    
-    <link href="<%= BASE_URL %>css/fontawesome-all.min.css" rel="stylesheet">  
-    <link href="<%= BASE_URL %>css/animate.min.css" rel="stylesheet">  
+    <!--<link href="<%= BASE_URL %>css/bootstrap-reboot.min.css" rel="stylesheet">-->    
+    <!--<link href="<%= BASE_URL %>css/bootstrap-grid.min.css" rel="stylesheet">-->    
+    <!--<link href="<%= BASE_URL %>css/fontawesome-all.min.css" rel="stylesheet">-->  
+    <!--<link href="<%= BASE_URL %>css/animate.min.css" rel="stylesheet">-->  
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">     
