--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="<%= BASE_URL %>favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="<%= BASE_URL %>favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="<%= BASE_URL %>favicon/favicon-16x16.png">
-    <link rel="manifest" href="favicon/manifest.json">
+    <link rel="manifest" href="<%= BASE_URL %>favicon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
